--- a/main.css
+++ b/main.css
@@ -20,6 +20,10 @@ main {
   flex: auto;
   margin: 32px 72px;
 
+  display: flex;
+  flex-flow: column;
+  gap: 64px;
+
   border-radius: 16px;
   padding: 32px;
   box-shadow: 4px 4px 12px #0000003F;
@@ -39,25 +43,43 @@ footer {
   width: 1px;
 }
 
-#form hr {
-  visibility: hidden;
-  width: 100%;
-}
-
 #form {
   display: flex;
   flex-flow: row wrap;
-  gap: 8px;
-  width: 100%;
   align-items: center;
+  gap: 16px;
 
   color: black;
 }
 
+#input-container {
+  flex: 3;
+  min-width: 256px;
+
+  display: flex;
+  flex-flow: column;
+  align-items: stretch;
+  gap: 24px;
+}
+
+.input-block {
+  display: flex;
+  flex-flow: row wrap;
+  gap: 8px 32px;
+}
+
+#form-submit-container {
+  margin: 32px 64px;
+  flex: 1;
+
+  display: flex;
+  flex-flow: column;
+  align-items: center;
+}
+
 .field {
-  width: fit-content;
   padding: 4px 20px;
-  max-width: 100%;
+  flex: 1;
 
   display: flex;
   flex-flow: row;
@@ -87,7 +109,7 @@ footer {
 }
 
 .field input {
-  flex: auto;
+  /* flex: auto; */
   padding: 0;
   min-width: 0px;
 
